@@ -1,0 +1,7 @@
+<div class="vertical-pathway">
+  {{#each nodes}}
+    <div class="step" style="--offset: {{offset}}%">
+      <img src="/img/pathlevel-gray.PNG" class="node" data-id="{{id}}" alt="Workout {{id}}">
+    </div>
+  {{/each}}
+</div>
